baml_language/crates/baml_tests/snapshots/diagnostic_errors/void_return_type/baml_tests__diagnostic_errors__void_return_type__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Error: this body may throw through callback `handler`, but declared throws is `never`. Add an explicit `throws` to the callback, catch the call, or make the callback non-throwing.
    ╭─[ function_type_throws.baml:28:9 ]
    │
 28 │   return (value: int) -> string { handler(value) }
    │         ─────────────────────┬────────────────────  
    │                              ╰────────────────────── this body may throw through callback `handler`, but declared throws is `never`. Add an explicit `throws` to the callback, catch the call, or make the callback non-throwing.
    │ 
    │ Note: Error code: E0096
────╯

  [type] Error: cannot use return value of a void function
    ╭─[ void_function_type.baml:12:16 ]
    │
 12 │   let result = cb(1);
    │                ──┬──  
    │                  ╰──── cannot use return value of a void function
    │ 
    │ Note: Error code: E0001
────╯

  [type] Error: cannot use return value of a void function
    ╭─[ void_lambda.baml:11:11 ]
    │
 11 │   let x = f();
    │           ─┬─  
    │            ╰─── cannot use return value of a void function
    │ 
    │ Note: Error code: E0001
────╯

  [type] Error: type mismatch: expected void, got 42
    ╭─[ void_return_type.baml:12:10 ]
    │
 12 │   return 42;
    │          ─┬  
    │           ╰── type mismatch: expected void, got 42
    │ 
    │ Note: Error code: E0001
────╯

  [type] Error: cannot use return value of a void function
    ╭─[ void_return_type.baml:17:11 ]
    │
 17 │   let x = do_nothing();
    │           ──────┬─────  
    │                 ╰─────── cannot use return value of a void function
    │ 
    │ Note: Error code: E0001
────╯

  [hir] Error: `void` can only be used as a function return type, not as a parameter type
   ╭─[ void_type_position_errors.baml:2:22 ]
   │
 2 │ function bad_param(x: void) -> int {
   │                      ──┬──  
   │                        ╰──── `void` not allowed here
   │ 
   │ Note: Error code: E0110
───╯

  [hir] Error: `void` can only be used as a function return type, not as a let binding annotation
   ╭─[ void_type_position_errors.baml:8:10 ]
   │
 8 │   let x: void = 1;
   │          ──┬─  
   │            ╰─── `void` not allowed here
   │ 
   │ Note: Error code: E0110
───╯

  [hir] Error: `void` can only be used as a function return type, not as a let binding annotation
    ╭─[ void_type_position_errors.baml:10:10 ]
    │
 10 │   let y: void = {
    │          ──┬─  
    │            ╰─── `void` not allowed here
    │ 
    │ Note: Error code: E0110
────╯

  [type] Error: type mismatch: expected int, got "string"
    ╭─[ void_type_position_errors.baml:12:18 ]
    │
 12 │     let z: int = "string";
    │                  ────┬───  
    │                      ╰───── type mismatch: expected int, got "string"
    │ 
    │ Note: Error code: E0001
────╯

  [hir] Error: `void` can only be used as a function return type, not as an optional type (`void?`)
    ╭─[ void_type_position_errors.baml:19:27 ]
    │
 19 │ function bad_optional() -> void? {
    │                           ───┬──  
    │                              ╰──── `void` not allowed here
    │ 
    │ Note: Error code: E0110
────╯

  [hir] Error: `void` can only be used as a function return type, not as a list type (`void[]`)
    ╭─[ void_type_position_errors.baml:24:23 ]
    │
 24 │ function bad_list() -> void[] {
    │                       ───┬───  
    │                          ╰───── `void` not allowed here
    │ 
    │ Note: Error code: E0110
────╯
