baml_language/crates/baml_tests/snapshots/diagnostic_errors/void_return_type/baml_tests__diagnostic_errors__void_return_type__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.bad_callback_use(cb: (int) -> void throws never) -> int {
    load_const 1
    load_var cb
    call_indirect
    store_var result
    load_const 1
    return
}

function user.bad_let() -> int {
    load_const "string"
    store_var z
    load_const 1
    return
}

function user.bad_list() -> void[] {
    alloc_array 0
    return
}

function user.bad_optional() -> void? {
    load_const null
    return
}

function user.bad_param(x: void) -> int {
    load_const 1
    return
}

function user.call_void() -> int {
    call user.do_nothing
    pop 1
    load_const 1
    return
}

function user.do_bad_return() -> void {
    load_const 42
    return
}

function user.do_nothing() -> void {
    load_const null
    return
}

function user.do_return() -> void {
    load_var _0
    return
}

function user.forward_direct(handler: (int) -> string throws never, value: int) -> string {
    load_var value
    load_var handler
    call_indirect
    return
}

function user.forward_optional(handler: ((int) -> string throws never)?, value: int) -> string? {
    load_var handler
    load_const null
    cmp_op ==
    pop_jump_if_false L0
    jump L1

  L0:
    load_var value
    load_var handler
    call_indirect
    jump L2

  L1:
    load_const null

  L2:
    return
}

function user.return_closure(handler: (int) -> string throws never) -> (int) -> string throws never {
    load_var ?1
    make_cell
    store_var ?1
    load_var handler
    make_closure .<lambda(return_closure, 0)>, 1
    return
}

function user.run_callback(cb: (int) -> void throws never, x: int) -> int {
    load_var x
    load_var cb
    call_indirect
    pop 1
    load_var x
    return
}

function user.run_explicit(handler: (int) -> string throws never, value: int) -> string {
    load_var value
    load_var handler
    call_indirect
    return
}

function user.run_hidden(handler: (int) -> string throws never, value: int) -> string {
    load_var value
    load_var handler
    call_indirect
    return
}

function user.run_implicit(handler: (int) -> string throws never, value: int) -> string {
    load_var value
    load_var handler
    call_indirect
    return
}

function user.side_effects(x: int) -> void {
    load_var x
    load_const 1
    bin_op +
    store_var y
    load_const null
    return
}

function user.test_void_lambda() -> int {
    make_closure .<lambda(test_void_lambda, 0)>, 0
    call_indirect
    pop 1
    load_const 1
    return
}

function user.test_void_lambda_assign() -> int {
    make_closure .<lambda(test_void_lambda_assign, 0)>, 0
    call_indirect
    store_var x
    load_const 1
    return
}

function user.test_void_lambda_stmt() -> int {
    load_const 42
    make_closure .<lambda(test_void_lambda_stmt, 0)>, 0
    call_indirect
    pop 1
    load_const 1
    return
}

function user.use_void() -> int {
    call user.do_nothing
    store_var x
    load_const 1
    return
}
